--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -185,10 +185,22 @@ section
   &.active
     display block
 
-  &.indented > div:not(.pulltorefresh)
-    width 100%
-    box-sizing(border-box)
-    height 100%
+  &.indented
+    &.active
+      & > div:not(.pulltorefresh)
+        position absolute
+        top 0
+        right 0
+        left 0
+        bottom 0
+
+    & > div:not(.pulltorefresh)
+      flexbox-weight(1)
+      width 100%
+      box-sizing(border-box)
+      height 100%
+      & > *:last-child
+        margin-bottom INDENT
 
 header > h1 > img + span
   position relative
