Added url handler first version

--- a/stylesheets/Tako.theme.styl
+++ b/stylesheets/Tako.theme.styl
@@ -1,3 +1,5 @@
+// @import url(http://fonts.googleapis.com/css?family=Lato:300,700,300italic,700italic);
+
 @font-face
   font-family 'tako'
   font-style normal
@@ -14,8 +16,8 @@ FAIL                = #ed1c13
 SUCCESS             = #199c12
 DISABLED            = #acb8b9
 BACKGROUND          = #e7e7e7
-FONT                = 14px  "tako"
-FONT_FAMILY         = "tako"
+FONT                = 14px  "lato"
+FONT_FAMILY         = "lato"
 FONT_SIZE           = 16px
 
 LINE_COLOR          = #bfbfbf
