Navigation changes, iscroll

--- a/stylesheets/Tako.theme.styl
+++ b/stylesheets/Tako.theme.styl
@@ -104,6 +104,9 @@ aside
   & .counter
     background-color lighten(SECONDARY, 30%)
 
+  & > header
+    background-color SECONDARY
+
 .accept
   background-color lighten(SUCCESS, 15%)!important
   color #FFF
