--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -172,8 +172,8 @@ section
   width 100%
   margin 0
   overflow-x hidden
-  overflow-y scroll
-  -webkit-overflow-scrolling touch
+  // overflow-y scroll
+  // -webkit-overflow-scrolling touch
   box-flex 1
   flex 1 9999999 auto
   flexbox-order(3)
