--- a/stylesheets/Tako.aside.styl
+++ b/stylesheets/Tako.aside.styl
@@ -33,6 +33,11 @@ aside
     text-align center
     height HEADER_HEIGHT
     line-height HEADER_HEIGHT
+    position absolute
+    top 0
+    left 0
+    right 0
+    z-index ASIDE_INDEX +1
 
     & > h1
       font-weight bold
@@ -47,8 +52,8 @@ aside
         width auto
         height HEADER_HEIGHT - 8
         margin-top 8px
-    & + ul
-      margin-top 8px
+    & + div
+      margin-top HEADER_HEIGHT + 8
 
 div[data-element="aside_background"]
   position absolute
