Scroll fixings, module overwritter

--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -9,6 +9,7 @@ article
   bottom 0
   left 0
   right 0
+  overflow hidden
 
   display-flexbox-vertical()
 
@@ -169,6 +170,7 @@ footer
 
 section
   position relative
+  // top 4px
   width 100%
   margin 0
   overflow-x hidden
