Fixed IOS font bug

--- a/stylesheets/Tako.theme.styl
+++ b/stylesheets/Tako.theme.styl
@@ -17,8 +17,8 @@ FAIL                = #ed1c13
 SUCCESS             = #199c12
 DISABLED            = #acb8b9
 BACKGROUND          = #e7e7e7
-FONT                = 14px  "lato"
-FONT_FAMILY         = "lato"
+FONT                = 14px  "tako"
+FONT_FAMILY         = "tako"
 FONT_SIZE           = 16px
 
 LINE_COLOR          = #bfbfbf
