Fixed theme, added centered, and fixed aside

--- a/stylesheets/Tako.article.styl
+++ b/stylesheets/Tako.article.styl
@@ -192,10 +192,6 @@ section
       & > div:not(.pulltorefresh)
         position relative
         min-height 100%
-        // top 0
-        // right 0
-        // left 0
-        // bottom 0
 
     & > div:not(.pulltorefresh)
       flexbox-weight(1)
@@ -204,6 +200,32 @@ section
       height 100%
       & > *:last-child
         margin-bottom INDENT
+
+  &.centered > div > *:first-child
+    position absolute
+    top 0
+    right 0
+    left 0
+    bottom 0
+    margin auto
+    max-height 75%
+    max-width 75%
+    background-color #fff
+    border 1px solid black
+    box-sizing(border-box)
+    padding INDENT
+    overflow hidden
+  // &.centered
+  //   &.active > div
+  //     display-flexbox-vertical()
+  //     flexbox-align-stretch()
+  //     flexbox-pack-justify()
+
+  //     & > *:first-child
+  //       flexbox-weight 0
+  //       max-height 80%
+  //       max-width 80%
+  //       border 1px solid black
 
 header > h1 > img + span
   position relative
