--- a/stylesheets/theme/Tako.theme.styl
+++ b/stylesheets/theme/Tako.theme.styl
@@ -105,6 +105,9 @@ section
   background-color BACKGROUND
   color TEXT
 
+  &.centered > div > *:first-child
+    border 1px solid darken(BACKGROUND, 50%)
+
 aside
   background-color SECONDARY
   color SECONDARY_TEXT !important
