--- a/stylesheets/Tako.forms.styl
+++ b/stylesheets/Tako.forms.styl
@@ -263,8 +263,10 @@ form, .form
   & fieldset
     position relative
     background-color white
-    border-bottom 1px solid rgba(0, 0, 0, 0.1)
     padding 8px 10px 8px 10px
+
+    & + fieldset
+      border-top 1px solid rgba(0, 0, 0, 0.1)
 
     &:first-child
       border-top 1px solid rgba(0, 0, 0, 0.1)
