--- a/stylesheets/Tako.notifications.styl
+++ b/stylesheets/Tako.notifications.styl
@@ -337,3 +337,7 @@ div[data-element="notification"]
           display block
           position relative
           top 30px
+
+body.noflat, body.no_flat
+  & > div[data-element="notification"] > div > article.window
+    border-radius 5px
