--- a/stylesheets/Tako.buttons.styl
+++ b/stylesheets/Tako.buttons.styl
@@ -164,7 +164,6 @@ header
 
   & button.button
     text-indent 0
-    border-radius(5px)
     display inline-block
     font-weight bold
     font-style normal
@@ -212,3 +211,8 @@ section
     padding-top 2px
     padding-bottom 3px
     margin 5px 0
+
+body.noflat, body.no_flat
+  & section, & header
+    & button, & .button, & input[type=submit], & input[type=reset], & input[type=button]
+      border-radius 5px
