--- a/stylesheets/theme/Tako.theme.styl
+++ b/stylesheets/theme/Tako.theme.styl
@@ -105,8 +105,8 @@ section
   background-color BACKGROUND
   color TEXT
 
-  &.centered > div > *:first-child
-    border 1px solid darken(BACKGROUND, 10%)
+  &.centered > *:first-child
+    border 1px solid darken(BACKGROUND, 25%)
 
 aside
   background-color SECONDARY
