--- a/stylesheets/theme/Theme.flat.styl
+++ b/stylesheets/theme/Theme.flat.styl
@@ -1,12 +1,12 @@
 body.noflat, body.no_flat
-  .theme
+  & .theme
     background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)!important
     background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)!important
     background-image -ms-linear-gradient(lighten(THEME, 35%), THEME)!important
     background-image -o-linear-gradient(lighten(THEME, 35%), THEME)!important
     background-image linear-gradient(lighten(THEME, 35%), THEME)!important
 
-  article
+  & article
     & > header
       background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)!important
       background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)!important
@@ -14,28 +14,28 @@ body.noflat, body.no_flat
       background-image -o-linear-gradient(lighten(THEME, 35%), THEME)!important
       background-image linear-gradient(lighten(THEME, 35%), THEME)!important
 
-  button, .button, input[type=submit], input[type=reset], input[type=button]
+  & button, .button, input[type=submit], input[type=reset], input[type=button]
     background-image -webkit-linear-gradient(lighten(THEME, 35%), THEME)
     background-image -moz-linear-gradient(lighten(THEME, 35%), THEME)
     background-image -ms-linear-gradient(lighten(THEME, 35%), THEME)
     background-image -o-linear-gradient(lighten(THEME, 35%), THEME)
     background-image linear-gradient(lighten(THEME, 35%), THEME)
 
-  .accept
+  & .accept
     background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
     background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
     background-image -ms-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
     background-image -o-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
     background-image linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
 
-  .cancel
+  & .cancel
     background-image -webkit-linear-gradient(lighten(FAIL, 15%), FAIL)!important
     background-image -moz-linear-gradient(lighten(FAIL, 15%), FAIL)!important
     background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)!important
     background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)!important
     background-image linear-gradient(lighten(FAIL, 15%), FAIL)!important
 
-  div[data-element="notification"] > div > article.window
+  & div[data-element="notification"] > div > article.window
     &.success > header
       background-image -webkit-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
       background-image -moz-linear-gradient(lighten(SUCCESS, 15%), SUCCESS)!important
@@ -49,3 +49,7 @@ body.noflat, body.no_flat
       background-image -ms-linear-gradient(lighten(FAIL, 15%), FAIL)!important
       background-image -o-linear-gradient(lighten(FAIL, 15%), FAIL)!important
       background-image linear-gradient(lighten(FAIL, 15%), FAIL)!important
+  & .progress_bar
+    border-radius 5px
+    & > *
+      border-radius 5px
