Finished first version of android styling

--- a/stylesheets/Tako.notifications.styl
+++ b/stylesheets/Tako.notifications.styl
@@ -41,7 +41,8 @@ div[data-element="notification"]
 
     & > section
       overflow-x hidden
-      overflow-y scroll
+      overflow-y visible !important
+      // overflow-y scroll
       & > div
         position static
         height auto
