--- a/stylesheets/theme/generic/Theme.article.styl
+++ b/stylesheets/theme/generic/Theme.article.styl
@@ -49,7 +49,7 @@ footer
       & .counter
         background-color SECONDARY
     &.current
-      border-top: 4px solid THEME !important;
+      border-top 4px solid THEME !important
 
   & > nav > *
     border-right 1px solid darken(SECONDARY, 15%)
