--- a/stylesheets/Tako.lists.styl
+++ b/stylesheets/Tako.lists.styl
@@ -1,156 +1,157 @@
-section ul
-  list-style none
-  width 100%
-  padding 0
-  margin 0
+section
+  & ul, & ol
+    list-style none
+    width 100%
+    padding 0
+    margin 0
 
 
-  & > li
-    position relative
-    background-color white
-    border-bottom 1px solid rgba(0, 0, 0, 0.1)
-    padding .9em
+    & > li
+      position relative
+      background-color white
+      border-bottom 1px solid rgba(0, 0, 0, 0.1)
+      padding .9em
 
-    &.separator
-      background-color rgba(0, 0, 0, 0.1)
-      color white
-      padding 1px 10px 1px 10px
+      &.separator
+        background-color rgba(0, 0, 0, 0.1)
+        color white
+        padding 1px 10px 1px 10px
 
-    &.icon:before
-      display inline-block
-      float left
-      margin-right .3em
-      line-height 40px
-      width 40px
-      height 40px
-      font-size 3em
-
-    &.arrow
-      padding-right 40px
-      &:after
-        opacity 0.5
-        position absolute
-        top 0
-        bottom 0
-        right 0
-        line-height 60px
-        height 60px
-        width 40px
-        margin auto auto auto 0
-        font-family 'takoicons'
-        font-style normal
-        font-weight normal !important
-        font-size 1.8em
-        speak none
+      &.icon:before
         display inline-block
-        text-decoration inherit
-        text-align center
-        font-variant normal
-        text-transform none
-        content '\e895'
-      &.strong
+        float left
+        margin-right .3em
+        line-height 40px
+        width 40px
+        height 40px
+        font-size 3em
+
+      &.arrow
+        padding-right 40px
         &:after
-          font-size 1.2em
-          content '\e820'
+          opacity 0.5
+          position absolute
+          top 0
+          bottom 0
+          right 0
+          line-height 60px
+          height 60px
+          width 40px
+          margin auto auto auto 0
+          font-family 'takoicons'
+          font-style normal
+          font-weight normal !important
+          font-size 1.8em
+          speak none
+          display inline-block
+          text-decoration inherit
+          text-align center
+          font-variant normal
+          text-transform none
+          content '\e895'
+        &.strong
+          &:after
+            font-size 1.2em
+            content '\e820'
 
-      &.circled
-        &:after
-          font-size 1.5em
-          content '\e82b'
+        &.circled
+          &:after
+            font-size 1.5em
+            content '\e82b'
 
-    &:first-child
-      border-top 1px solid rgba(0, 0, 0, 0.1)
+      &:first-child
+        border-top 1px solid rgba(0, 0, 0, 0.1)
 
-    & h1, h2, h3, h4, h5, h6, strong, small, .strong, .small
-      overflow hidden
-      white-space nowrap
-      display block
+      & h1, h2, h3, h4, h5, h6, strong, small, .strong, .small
+        overflow hidden
+        white-space nowrap
+        display block
 
-    & small
-      margin-top .2em
-      word-wrap break-word
-      white-space -moz-pre-wrap
-      white-space pre-wrap
+      & small
+        margin-top .2em
+        word-wrap break-word
+        white-space -moz-pre-wrap
+        white-space pre-wrap
 
-    & .small:not(img)
-      margin-top .2em
-      opacity .6
-      font-size 1.1em!important
+      & .small:not(img)
+        margin-top .2em
+        opacity .6
+        font-size 1.1em!important
 
-    & .strong
-      font-weight bold
-      font-size 1.1em
-      word-wrap break-word
-      white-space -moz-pre-wrap
-      white-space pre-wrap
+      & .strong
+        font-weight bold
+        font-size 1.1em
+        word-wrap break-word
+        white-space -moz-pre-wrap
+        white-space pre-wrap
 
-    & > img
-      width LIST_IMAGE
-      height LIST_IMAGE
-      display inline
-      float left
-      margin-right .9em
+      & > img
+        width LIST_IMAGE
+        height LIST_IMAGE
+        display inline
+        float left
+        margin-right .9em
 
-      &.big
-        width LIST_BIG_IMAGE
-        height LIST_BIG_IMAGE
-        margin-right .7em
-        margin-left -.75em
-        margin-top -.8em
-        margin-bottom -.9em
+        &.big
+          width LIST_BIG_IMAGE
+          height LIST_BIG_IMAGE
+          margin-right .7em
+          margin-left -.75em
+          margin-top -.8em
+          margin-bottom -.9em
 
 
-      &.small
-        width LIST_SMALL_IMAGE
-        height LIST_SMALL_IMAGE
-        margin-right 1.1em
-        margin-top .4em
+        &.small
+          width LIST_SMALL_IMAGE
+          height LIST_SMALL_IMAGE
+          margin-right 1.1em
+          margin-top .4em
 
-    & input
-      &[type="radio"], &[type="checkbox"]
-        &.onright
-          margin-top -0.1em
+      & input
+        &[type="radio"], &[type="checkbox"]
+          &.onright
+            margin-top -0.1em
 
-          &.switch
-            margin-top -0.4em
-    & .icon:before
-      display inline-block
-      float left
-      margin-right .4em
-      line-height 1em
-      width 24px
-      height 24px
-      font-size 1.4em
+            &.switch
+              margin-top -0.4em
+      & .icon:before
+        display inline-block
+        float left
+        margin-right .4em
+        line-height 1em
+        width 24px
+        height 24px
+        font-size 1.4em
 
-    & label:not(.select)
-      line-height 32px
-      height 32px
-      float left
-      margin-top 5px
+      & label:not(.select)
+        line-height 32px
+        height 32px
+        float left
+        margin-top 5px
 
-    & input, & select, & textarea, & label.select
-      float right
+      & input, & select, & textarea, & label.select
+        float right
 
-    &:after
-      display block
-      content ""
-      clear both
+      &:after
+        display block
+        content ""
+        clear both
 
-    & [type="text"], & [type="password"], & [type="date"], & [type="datetime"], & [type="email"], & [type="number"], & [type="search"], & [type="tel"], & [type="time"], & [type="url"], & select, & textarea, & label.select
-      width 100%
+      & [type="text"], & [type="password"], & [type="date"], & [type="datetime"], & [type="email"], & [type="number"], & [type="search"], & [type="tel"], & [type="time"], & [type="url"], & select, & textarea, & label.select
+        width 100%
 
-    & [type="range"]
-      width 100%
+      & [type="range"]
+        width 100%
 
-    & button, & .button
-      &.anchor
-        padding-left 0
-        padding-right 0
+      & button, & .button
+        &.anchor
+          padding-left 0
+          padding-right 0
 
-  &.indented > li
-    margin INDENT
+    &.indented > li
+      margin INDENT
 
-aside ul
+aside ul, aside ol
   list-style none
   width 100%
   padding 0
@@ -210,10 +211,11 @@ aside ul
       padding 1px 10px 1px 10px
 
 body.noflat, body.no_flat
-  & section.indented > div ul li
-    &:first-child
-      vendor('border-top-left-radius', 5px)
-      vendor('border-top-right-radius', 5px)
-    &:last-child
-      vendor('border-bottom-left-radius', 5px)
-      vendor('border-bottom-right-radius', 5px)
+  & section.indented div
+    & > ul li, & ol li
+      &:first-child
+        vendor('border-top-left-radius', 5px)
+        vendor('border-top-right-radius', 5px)
+      &:last-child
+        vendor('border-bottom-left-radius', 5px)
+        vendor('border-bottom-right-radius', 5px)
