Improved android notifications

--- a/stylesheets/Tako.notifications.styl
+++ b/stylesheets/Tako.notifications.styl
@@ -237,7 +237,8 @@ div[data-element="notification"]
         line-height 100px
         width 100%
         text-align center
-        overflow hidden
+        overflow-x hidden !important
+        overflow-y hidden !important
 
         & .icon
           font-size 70px
