Ios style (modals pending)

--- a/stylesheets/theme/generic/tbase.styl
+++ b/stylesheets/theme/generic/tbase.styl
@@ -1,5 +1,6 @@
 html, body
   font FONT
+body[data-os], body[data-browser]
   background-image -webkit-linear-gradient(top, THEME_COLOR 52px, lighten(SECONDARY, 5%) 0px, lighten(SECONDARY, 5%) 102px, lighten(SECONDARY, 5%) 0px, BACKGROUND 0px, BACKGROUND 100%)
   background-image -moz-linear-gradient(top, THEME_COLOR 52px, lighten(SECONDARY, 5%) 0px, lighten(SECONDARY, 5%) 102px, lighten(SECONDARY, 5%) 0px, BACKGROUND 0px, BACKGROUND 100%)
   background-image -o-linear-gradient(top, THEME_COLOR 52px, lighten(SECONDARY, 5%) 0px, lighten(SECONDARY, 5%) 102px, lighten(SECONDARY, 5%) 0px, BACKGROUND 0px, BACKGROUND 100%)
