--- a/stylesheets/theme/generic/Theme.article.styl
+++ b/stylesheets/theme/generic/Theme.article.styl
@@ -10,62 +10,63 @@ button, .button, input[type=submit], input[type=reset], input[type=button]
   background-color lighten(THEME, 15%)
   color SECONDARY_TEXT
 
-article
-  & > header
-    background-color THEME_COLOR !important
+body[data-os], body[data-browser]
+  & article
+    & > header
+      background-color THEME_COLOR
+      color SECONDARY_TEXT
+
+      & .counter
+        background-color lighten(THEME, 30%)
+
+      & .button
+        border 1px solid darken(THEME, 30%)
+
+      & .counter
+        background-color darken(THEME, 10%)
+
+    & > nav
+      color SECONDARY_TEXT
+      background-color lighten(SECONDARY, 5%)!important
+
+      & .current
+        background-color SECONDARY_ACTIVE
+        border-bottom 4px solid THEME
+        box-sizing(border-box)
+
+      & > *
+        border-right 1px solid darken(SECONDARY, 15%)
+
+        &:last-child
+          border-right none
+
+  & footer
+    background-color lighten(SECONDARY, 5%)!important
     color SECONDARY_TEXT !important
 
-    & .counter
-      background-color lighten(THEME, 30%)
+    & button, & .button, & input[type=submit], & input[type=reset], & input[type=button]
+      background-color lighten(SECONDARY, 5%)
+      &:active, &:hover
+        & .counter
+          background-color SECONDARY
+      &.current
+        border-top 4px solid THEME !important
 
-    & .button
-      border 1px solid darken(THEME, 30%)
-
-    & .counter
-      background-color darken(THEME, 10%)
-
-  & > nav
-    color SECONDARY_TEXT
-    background-color lighten(SECONDARY, 5%)!important
-
-    & .current
-      background-color SECONDARY_ACTIVE
-      border-bottom 4px solid THEME
-      box-sizing(border-box)
-
-    & > *
+    & > nav > *
       border-right 1px solid darken(SECONDARY, 15%)
 
       &:last-child
         border-right none
 
-footer
-  background-color lighten(SECONDARY, 5%)!important
-  color SECONDARY_TEXT !important
+    & .counter
+      background-color darken(SECONDARY_ACTIVE, 50%)
 
-  & button, & .button, & input[type=submit], & input[type=reset], & input[type=button]
-    background-color lighten(SECONDARY, 5%)
-    &:active, &:hover
-      & .counter
-        background-color SECONDARY
-    &.current
-      border-top 4px solid THEME !important
+  & section
+    background-color BACKGROUND
+    color TEXT
 
-  & > nav > *
-    border-right 1px solid darken(SECONDARY, 15%)
-
-    &:last-child
-      border-right none
-
-  & .counter
-    background-color darken(SECONDARY_ACTIVE, 50%)
-
-section
-  background-color BACKGROUND
-  color TEXT
-
-  &.centered > *:first-child
-    border 1px solid darken(BACKGROUND, 25%)
+    &.centered > *:first-child
+      border 1px solid darken(BACKGROUND, 25%)
 
 aside
   background-color SECONDARY
