--- a/stylesheets/theme/ios/main.styl
+++ b/stylesheets/theme/ios/main.styl
@@ -62,6 +62,9 @@ body[data-os="ios"]
 
     & *
       color lighten(TEXT, 25%) !important
+  & section
+    & button
+      padding-top 5px !important
 
   & aside
     background-color BACKGROUND
@@ -127,6 +130,12 @@ body[data-os="ios"]
 
   & div[data-element="notification"]
     & article.window
+      &.custom > header
+        & > h1 > span
+          position relative
+          top 3px
+        & > *
+          color THEME
       &.confirm
         & span.title
           font-size 1.5em
@@ -148,11 +157,5 @@ body[data-os="ios"]
               color THEME !important
             &.cancel
               color TEXT !important
-      // &:not(.success), &:not(.error)
-      //   & > header
-      //     background-color transparent !important
-      //     background-image none !important
-      //     color TEXT !important
-
-      //     & > .close
-      //       color TEXT !important
+  & .progress_bar
+    height 2px
