Fixed colours in android and ios

--- a/stylesheets/theme/android/main.styl
+++ b/stylesheets/theme/android/main.styl
@@ -152,3 +152,29 @@ body[data-os="android"]
 
       //     & > .close
       //       color TEXT !important
+  & .blue
+    background-image none !important
+  & .red
+    background-image none !important
+  & .yellow
+    background-image none !important
+  & .black
+    background-image none !important
+  & .white
+    background-image none !important
+  & .grey
+    background-image none !important
+  & .green
+    background-image none !important
+  & .pink
+    background-image none !important
+  & .purple
+    background-image none !important
+  & .brown
+    background-image none !important
+  & .orange
+    background-image none !important
+  & .firefox
+    background-image none !important
+  & .theme
+    background-image none !important
