--- a/stylesheets/theme/ios/main.styl
+++ b/stylesheets/theme/ios/main.styl
@@ -159,3 +159,30 @@ body[data-os="ios"]
               color TEXT !important
   & .progress_bar
     height 2px
+
+  & .blue
+    background-image none !important
+  & .red
+    background-image none !important
+  & .yellow
+    background-image none !important
+  & .black
+    background-image none !important
+  & .white
+    background-image none !important
+  & .grey
+    background-image none !important
+  & .green
+    background-image none !important
+  & .pink
+    background-image none !important
+  & .purple
+    background-image none !important
+  & .brown
+    background-image none !important
+  & .orange
+    background-image none !important
+  & .firefox
+    background-image none !important
+  & .theme
+    background-image none !important
